# rs3

./: .gitignore  Cargo.toml  README.md  config.toml
src/: bucket.rs  client.rs  conf.rs  error.rs  main.rs  object.rs
src/cli/: commands.rs  parser.rs
src/config/: app_config.rs
src/s3/: client.rs
