[package]
name = "rs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# read config.toml
config = "0.13"
serde = { version = "1", features = ["derive"] }

# Aws libs
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
thiserror = "1.0"